gobmkida/c2/print_top_moves
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/print_top_moves/src/engine/value_moves.c:3119:12: error: expected expression
*( _OWORD *)&best_moves[4] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/print_top_moves/src/engine/value_moves.c:3119:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&best_moves[4] = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/print_top_moves/src/engine/value_moves.c:3120:12: error: expected expression
*( _OWORD *)best_moves = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/print_top_moves/src/engine/value_moves.c:3120:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)best_moves = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/print_top_moves/src/engine/value_moves.c:3122:12: error: expected expression
*( _OWORD *)best_move_values = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/print_top_moves/src/engine/value_moves.c:3122:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)best_move_values = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/print_top_moves/src/engine/value_moves.c:3123:12: error: expected expression
*( _OWORD *)&best_move_values[4] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/print_top_moves/src/engine/value_moves.c:3123:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&best_move_values[4] = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/print_top_moves/src/engine/value_moves.c:3133:38: error: too many arguments to function call, expected 2, have 3
record_top_move( v1, *( float *)&v0, 0.0); 
~~~~~~~~~~~~~~~                      ^~~
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/print_top_moves/src/engine/liberty.h:456:1: note: 'record_top_move' declared here
void record_top_move(int move, float val);
^
9 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/print_top_moves/src/obj/1/value_moves.o] Error 1
